--- a/basic_checklist.html
+++ b/basic_checklist.html
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="https://milos.oroz.space/autocheckpro/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://milos.oroz.space/autocheckpro/basic_checklist.html">Basic Checklist</a>
