--- a/basic_checklist.html
+++ b/basic_checklist.html
@@ -49,11 +49,18 @@
             background-color: #0056b3;
             border-color: #0056b3;
         }
+
+        /* Add custom CSS for the sticky navbar */
+        .sticky-top {
+            position: sticky;
+            top: 0;
+            z-index: 1000; /* Adjust the z-index as needed */
+        }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">Car Inspection</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
