--- a/index.html
+++ b/index.html
@@ -165,6 +165,43 @@
             <a href="#" class="btn btn-primary">Get in Touch</a>
         </div>
     </section>
+
+    <!-- Footer Section -->
+<footer class="bg-dark text-light mt-5">
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>About Us</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae justo nec mi faucibus euismod.</p>
+            </div>
+            <div class="col-md-4">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Buying Checklist</a></li>
+                    <li><a href="#">Maintenance Checklist</a></li>
+                    <li><a href="#">Diagnostic Tools</a></li>
+                    <li><a href="#">Car Error Repair</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h5>Contact Us</h5>
+                <address>
+                    <p>123 Car Street</p>
+                    <p>City, Country</p>
+                    <p>Email: contact@01carhub.com</p>
+                    <p>Phone: +123-456-7890</p>
+                </address>
+            </div>
+        </div>
+        <hr>
+        <div class="text-center">
+            <p>&copy; 2023 01 Car Hub. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
+
     
     <!-- Add Bootstrap JS CDN (optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
