--- a/basic_checklist.html
+++ b/basic_checklist.html
@@ -8,91 +8,17 @@
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!-- Custom CSS Styles -->
+    <link rel="stylesheet" href="styles.css">
 
-    <style>
-        body {
-            padding: 20px;
-            background-color: #f8f9fa;
-        }
-
-        .container {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 5px;
-        }
-
-        h1 {
-            color: #007bff;
-        }
-
-        h2 {
-            color: #333;
-            margin-top: 20px;
-        }
-
-        .form-check-label {
-            color: #333;
-        }
-
-        .form-check-input {
-            margin-right: 10px;
-        }
-
-        .form-control {
-            margin-bottom: 10px;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #0056b3;
-        }
-
-        /* Add custom CSS for the sticky navbar */
-        .sticky-top {
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            /* Adjust the z-index as needed */
-        }
-
-        .form-check-input {
-            margin-right: 0px !important;
-        }
-    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Car Inspection</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://milos.oroz.space/autocheckpro/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://milos.oroz.space/autocheckpro/basic_checklist.html">Basic
-                            Checklist</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://milos.oroz.space/autocheckpro/test_drive.html">Test Drive</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <!-- Navbar -->
+    <div id="navbar"></div>
 
     <div class="container">
-        <h1 class="mt-5 text-center">Car Information Checklist</h1>
 
         <form class="mt-4">
             <!-- Year -->
@@ -262,14 +188,20 @@
             </div>
 
             <div id="review-section">
-                <h3>Review:</h3>
+                <h3>Checklist information review:</h3>
                 <p id="checked-count">0/18</p>
 
                 <div class="review-text"></div>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+
+
         </form>
+        <div class="form-check" style="text-align: left; padding-top: 20px;">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">PDF</button>
+            <button type="submit" class="btn btn-primary">Send to Email</button>
+        </div>
     </div>
 
     <!-- Include Bootstrap JavaScript and jQuery -->
@@ -340,10 +272,11 @@
             }
         });
     </script>
-
-
-
-
+    <script>
+        $(document).ready(function () {
+            $("#navbar").load("navi.html");
+        });
+    </script>
 
 
 
