--- a/basic_checklist.html
+++ b/basic_checklist.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Information Checklist</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
     <!-- Custom CSS Styles -->
     <link rel="stylesheet" href="styles.css">
 
@@ -198,17 +201,10 @@
 
         </form>
         <div class="form-check" style="text-align: left; padding-top: 20px;">
-            <button type="submit" class="btn btn-primary">Submit</button>
-            <button type="submit" class="btn btn-primary">PDF</button>
-            <button type="submit" class="btn btn-primary">Send to Email</button>
+            <button type="button" class="btn btn-primary" id="exportPdfButton">Export to PDF</button>
         </div>
     </div>
 
-    <!-- Include Bootstrap JavaScript and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -246,6 +242,16 @@
             // Attach a change event listener to each checkbox and input field
             $('input[type="checkbox"]').change(updateReviewText);
             $('.input-field').on('input', updateReviewText);
+             // Add a click event listener to the "Export to PDF" button
+           // Add a click event listener to the "Export to PDF" button
+    $('#exportPdfButton').click(function () {
+        // Check if at least one comment is added (text is not empty)
+        if (isAtLeastOneCommentAdded()) {
+            exportToPdf();
+        } else {
+            alert('Please add at least one comment before exporting to PDF.');
+        }
+    });
 
             function updateReviewText() {
                 // Initialize an empty string for the review text
@@ -270,6 +276,37 @@
                 // Update the review text element with HTML
                 $('.review-text').html(textToAdd);
             }
+
+            function exportToPdf() {
+                // Create a new jsPDF instance
+                window.jsPDF = window.jspdf.jsPDF;
+
+                const pdf = new jsPDF();
+
+
+                // Get the review text content
+                const reviewText = $('.review-text').html();
+
+                // Add the review text to the PDF document
+                pdf.text(reviewText, 10, 10);
+
+                // Save the PDF with a filename "review.pdf"
+                pdf.save('review.pdf');
+            }
+             // Helper function to check if at least one comment is added
+    function isAtLeastOneCommentAdded() {
+        let atLeastOneCommentAdded = false;
+
+        // Loop through input fields and check if any has non-empty value
+        $('.input-field').each(function () {
+            if ($.trim($(this).val()) !== '') {
+                atLeastOneCommentAdded = true;
+                return false; // Exit the loop if a non-empty input is found
+            }
+        });
+
+        return atLeastOneCommentAdded;
+    }
         });
     </script>
     <script>
@@ -277,6 +314,11 @@
             $("#navbar").load("navi.html");
         });
     </script>
+    <!-- Include Bootstrap JavaScript and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
 
