--- a/basic_checklist.html
+++ b/basic_checklist.html
@@ -8,12 +8,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 
     <!-- Include Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <!-- Custom CSS Styles -->
     <link rel="stylesheet" href="styles.css">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
 </head>
 
@@ -21,7 +22,7 @@
     <!-- Navbar -->
     <div id="navbar"></div>
 
-    <div class="container">
+    <section class="container">
 
         <form class="mt-4">
             <!-- Year -->
@@ -193,7 +194,7 @@
             <div id="review-section">
                 <h3>Checklist information review:</h3>
                 <div>How many items you checked: <span id="checked-count">0/18</span></div>
-                
+
                 <p>Comments you added:</p>
                 <div class="review-text"></div>
             </div>
@@ -204,7 +205,7 @@
         <div class="form-check" style="text-align: left; padding-top: 20px;">
             <button type="button" class="btn btn-primary" id="exportPdfButton">Export to PDF</button>
         </div>
-    </div>
+    </section>
 
 
     <script>
@@ -243,16 +244,16 @@
             // Attach a change event listener to each checkbox and input field
             $('input[type="checkbox"]').change(updateReviewText);
             $('.input-field').on('input', updateReviewText);
-             // Add a click event listener to the "Export to PDF" button
-           // Add a click event listener to the "Export to PDF" button
-    $('#exportPdfButton').click(function () {
-        // Check if at least one comment is added (text is not empty)
-        if (isAtLeastOneCommentAdded()) {
-            exportToPdf();
-        } else {
-            alert('Please add at least one comment before exporting to PDF.');
-        }
-    });
+            // Add a click event listener to the "Export to PDF" button
+            // Add a click event listener to the "Export to PDF" button
+            $('#exportPdfButton').click(function () {
+                // Check if at least one comment is added (text is not empty)
+                if (isAtLeastOneCommentAdded()) {
+                    exportToPdf();
+                } else {
+                    alert('Please add at least one comment before exporting to PDF.');
+                }
+            });
 
             function updateReviewText() {
                 // Initialize an empty string for the review text
@@ -290,24 +291,30 @@
 
                 // Add the review text to the PDF document
                 pdf.text(reviewText, 10, 10);
+                // Get the current date in a formatted string
+                const now = new Date();
+                const formattedDate = now.toLocaleDateString().replaceAll('/', '-');
 
-                // Save the PDF with a filename "review.pdf"
-                pdf.save('review.pdf');
+                // Generate a filename with the date
+                const filename = `review-${formattedDate}.pdf`;
+
+                // Save the PDF with the updated filename
+                pdf.save(filename);
             }
-             // Helper function to check if at least one comment is added
-    function isAtLeastOneCommentAdded() {
-        let atLeastOneCommentAdded = false;
+            // Helper function to check if at least one comment is added
+            function isAtLeastOneCommentAdded() {
+                let atLeastOneCommentAdded = false;
 
-        // Loop through input fields and check if any has non-empty value
-        $('.input-field').each(function () {
-            if ($.trim($(this).val()) !== '') {
-                atLeastOneCommentAdded = true;
-                return false; // Exit the loop if a non-empty input is found
+                // Loop through input fields and check if any has non-empty value
+                $('.input-field').each(function () {
+                    if ($.trim($(this).val()) !== '') {
+                        atLeastOneCommentAdded = true;
+                        return false; // Exit the loop if a non-empty input is found
+                    }
+                });
+
+                return atLeastOneCommentAdded;
             }
-        });
-
-        return atLeastOneCommentAdded;
-    }
         });
     </script>
     <script>
